--- a/index.html
+++ b/index.html
@@ -6,4 +6,27 @@
     <link rel="stylesheet" href="./styles.css" />
     <script src="./javascript.js" defer></script>
   </head>
+  <body>
+    <div class="calcu-body">
+      <div class="calcu-display"></div>
+      <div class="num-container">
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button>+</button>
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button>-</button>
+        <button>7</button>
+        <button>8</button>
+        <button>9</button>
+        <button>*</button>
+        <button>0</button>
+        <button>=</button>
+        <button>/</button>
+        <button>CLEAR</button>
+      </div>
+    </div>
+  </body>
 </html>
