Add classes in operands, clear and equal signs

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
         <button>1</button>
         <button>2</button>
         <button>3</button>
-        <button>+</button>
+        <button class="operand">+</button>
         <button>4</button>
         <button>5</button>
         <button>6</button>
-        <button>-</button>
+        <button class="operand">-</button>
         <button>7</button>
         <button>8</button>
         <button>9</button>
-        <button>*</button>
+        <button class="operand">*</button>
         <button>0</button>
-        <button>=</button>
-        <button>/</button>
-        <button>CLEAR</button>
+        <button class="operate">=</button>
+        <button class="operand">/</button>
+        <button class="clear">CLEAR</button>
       </div>
     </div>
   </body>
