Restructure the buttons for functionality

--- a/index.html
+++ b/index.html
@@ -10,22 +10,33 @@
     <div class="calcu-body">
       <div class="calcu-display"></div>
       <div class="num-container">
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button class="operand">+</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button class="operand">-</button>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button class="operand">*</button>
-        <button>0</button>
-        <button class="operate">=</button>
-        <button class="operand">/</button>
-        <button class="clear">CLEAR</button>
+        <div class="otherButtons">
+          <button>CE</button>
+          <button>-/+</button>
+          <button></button>
+          <button></button>
+        </div>
+        <div class="numOperation">
+          <div class="numbers">
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button>0</button>
+          </div>
+          <div class="operations">
+            <button class="operand">+</button>
+            <button class="operand">-</button>
+            <button class="operand">*</button>
+            <button class="operate">=</button>
+            <button class="operand">/</button>
+          </div>
+        </div>
       </div>
     </div>
   </body>
