--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <button>CE</button>
           <button>-/+</button>
           <button></button>
-          <button></button>
+          <button class="operate">=</button>
         </div>
         <div class="numOperation">
           <div class="numbers">
@@ -27,13 +27,12 @@
             <button>7</button>
             <button>8</button>
             <button>9</button>
-            <button>0</button>
+            <button class="numZero">0</button>
           </div>
           <div class="operations">
             <button class="operand">+</button>
             <button class="operand">-</button>
             <button class="operand">*</button>
-            <button class="operate">=</button>
             <button class="operand">/</button>
           </div>
         </div>
