Add class to the clear button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="calcu-display"></div>
       <div class="num-container">
         <div class="otherButtons">
-          <button>CE</button>
+          <button class="clear">CE</button>
           <button>-/+</button>
           <button></button>
           <button class="operate">=</button>
