Change the multiplication sign

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <div class="operations">
             <button class="operand">+</button>
             <button class="operand">-</button>
-            <button class="operand">*</button>
+            <button class="operand">x</button>
             <button class="operand">/</button>
           </div>
         </div>
