Add buttons for percentage and period

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="otherButtons">
           <button class="clear">CE</button>
           <button>-/+</button>
-          <button></button>
+          <button>%</button>
           <button class="operate">=</button>
         </div>
         <div class="numOperation">
@@ -28,6 +28,7 @@
             <button>8</button>
             <button>9</button>
             <button class="numZero">0</button>
+            <button>.</button>
           </div>
           <div class="operations">
             <button class="operand">+</button>
