Add class to the period button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <button>8</button>
             <button>9</button>
             <button class="numZero">0</button>
-            <button>.</button>
+            <button class="period">.</button>
           </div>
           <div class="operations">
             <button class="operand">+</button>
