--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <div class="calcu-display"></div>
       <div class="num-container">
         <div class="otherButtons">
-          <button class="clear">CE</button>
+          <button class="clear">CLEAR</button>
+          <button>C</button>
           <button>-/+</button>
-          <button>%</button>
           <button class="operate">=</button>
         </div>
         <div class="numOperation">
