Add class to backspace button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="num-container">
         <div class="otherButtons">
           <button class="clear">CLEAR</button>
-          <button>C</button>
+          <button class="backspace">C</button>
           <button>-/+</button>
           <button class="operate">=</button>
         </div>
