--- a/index.html
+++ b/index.html
@@ -39,5 +39,11 @@
         </div>
       </div>
     </div>
+    <div class="modal hidden">
+      <button class="close-modal">&times;</button>
+      <p>Do you want to clear all data?</p>
+      <button class="clear">Yes</button>
+      <button class="hidden">Cancel</button>
+    </div>
   </body>
 </html>
