Remove the class in the cancel button

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <button class="close-modal">&times;</button>
       <p>Do you want to clear all data?</p>
       <button class="clear">Yes</button>
-      <button class="close-modal">Cancel</button>
+      <button class="cancel">Cancel</button>
     </div>
   </body>
 </html>
