Add container for the lower buttons

--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
     <div class="modal hidden">
       <button class="close-modal">&times;</button>
       <p>Do you want to clear all data?</p>
-      <button class="clear">Yes</button>
-      <button class="cancel">Cancel</button>
+      <div modal-buttons>
+        <button class="clear">Yes</button>
+        <button class="cancel">Cancel</button>
+      </div>
     </div>
   </body>
 </html>
