Add class to the modal buttons

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="modal hidden">
       <button class="close-modal">&times;</button>
       <p>Do you want to clear all data?</p>
-      <div modal-buttons>
+      <div class="modal-buttons">
         <button class="clear">Yes</button>
         <button class="cancel">Cancel</button>
       </div>
