Add class to the error msg in modal

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
     <div class="modal hidden">
       <button class="close-modal">&times;</button>
-      <p>Do you want to clear all data?</p>
+      <p class="error-msg">Do you want to clear all data?</p>
       <div class="modal-buttons">
         <button class="clear">Yes</button>
         <button class="cancel">Cancel</button>
