--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
       </div>
     </div>
     <div class="modal hidden">
-      <button class="close-modal">&times;</button>
+      <div class="close-cont">
+        <button class="close-modal">&times;</button>
+      </div>
+
       <p class="error-msg">Do you want to clear all data?</p>
       <div class="modal-buttons">
         <button class="clear">Yes</button>
