Change the class of the yes button

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <p class="error-msg">Do you want to clear all data?</p>
       <div class="modal-buttons">
-        <button class="clear">Yes</button>
+        <button class="yes">Yes</button>
         <button class="cancel">Cancel</button>
       </div>
     </div>
