Change the error message and remove the close button

--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
       </div>
     </div>
     <div class="modal hidden">
-      <div class="close-cont">
-        <button class="close-modal">&times;</button>
-      </div>
-
-      <p class="error-msg">Do you want to clear all data?</p>
+      <h1>Are you sure?</h1>
+      <p class="error-msg">
+        You will lose all data. This action cannot be undone
+      </p>
       <div class="modal-buttons">
         <button class="yes">Yes</button>
         <button class="cancel">Cancel</button>
       </div>
     </div>
+    <div class="overlay hidden"></div>
   </body>
 </html>
