Adapted unicode for the backspace

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="num-container">
         <div class="otherButtons">
           <button class="clear">CLEAR</button>
-          <button class="backspace">C</button>
+          <button class="backspace">U+0008</button>
           <button>-/+</button>
           <button class="operate">=</button>
         </div>
