Change the unicode HTML text of backspace

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta content-type="text/html" charset="UTF-8" />
     <title>Calculator</title>
     <link rel="stylesheet" href="./styles.css" />
     <script src="./javascript.js" defer></script>
@@ -19,8 +19,7 @@
       <div class="num-container">
         <div class="otherButtons">
           <button class="clear">CLEAR</button>
-          <button class="backspace">U+232B</button>
-          <button>-/+</button>
+          <button class="backspace">&#9003;</button>
           <button class="operate">=</button>
         </div>
         <div class="numOperation">
