--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="calcu-display"></div>
       <div class="num-container">
         <div class="otherButtons">
-          <button class="clear">CLEAR</button>
+          <button class="clear">C</button>
           <button class="backspace">&#9003;</button>
           <button class="operate">=</button>
         </div>
